--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -52,16 +52,17 @@
             android:layout_gravity="center"/>
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/tv_imc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tu IMC es :336.06"
+
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_gravity="center" />
 
         <TextView
+            android:id="@+id/tv_imc_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Obesidad Morbida"
@@ -71,18 +72,18 @@
             android:layout_gravity="center"/>
 
         <ImageView
+            android:id="@+id/img_imc"
             android:layout_width="wrap_content"
-            android:layout_height="167dp"
-            android:src="@drawable/grafico_exceso_peso"
+            android:layout_height="168dp"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="12dp"
             />
 
         <TextView
+            android:id="@+id/img_fcm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Frecuencia Cardiaca Maxima"
             android:textColor="@color/purple_500"
             android:textSize="20sp"
             android:textStyle="bold"
