--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -66,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Ingresa tu peso:"
+        android:text="Ingresa tu peso en Kg:"
         android:textColor="#050505"
         android:textSize="20dp"
         android:textStyle="normal|bold"
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Ingresa tu talla:"
+        android:text="Ingresa tu talla en cm:"
         android:textColor="#050505"
         android:textSize="20dp"
         android:textStyle="normal|bold"
