--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity_Registro"
-    android:background="@color/fondo">
+    android:background="@color/white">
 
     <EditText
         android:id="@+id/txtEdad"
@@ -126,6 +126,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Seguir"
+        android:backgroundTint="@color/principal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -136,6 +137,7 @@
         android:id="@+id/checkBoxMujer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:buttonTint="@color/principal"
         android:text="Mujer"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toStartOf="@+id/checkBoxHombre"
@@ -147,6 +149,7 @@
         android:id="@+id/checkBoxHombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:buttonTint="@color/principal"
         android:layout_marginEnd="76dp"
         android:text="Hombre"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
