--- a/app/src/main/res/layout/activity_tab_navigation.xml
+++ b/app/src/main/res/layout/activity_tab_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/fondo">
+    android:background="@color/white">
 
     <FrameLayout
         android:id="@+id/flayContainer"
@@ -22,16 +22,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginEnd="12dp"
             android:layout_marginStart="12dp">
 
-            <EditText
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:backgroundTint="@color/black"
-                android:ems="10"
-                android:inputType="time" />
+                android:layout_height="2dp"
+                android:background="@color/black"/>
         </LinearLayout>
 
         <LinearLayout
