--- a/app/src/main/res/layout/activity_opcion_dieta.xml
+++ b/app/src/main/res/layout/activity_opcion_dieta.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="GYM Generatio"
+            android:text="GYM Generation"
             android:textColor="@color/purple_500"
             android:textSize="35sp"
             android:textStyle="bold" />
@@ -210,7 +210,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Descripcion"
+            android:text="Descripción"
             android:textColor="#3F51B5"
             android:textSize="25dp"
             android:textStyle="bold" />
@@ -226,7 +226,10 @@
         <TextView
             android:id="@+id/textView31"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="TextView" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:textStyle="italic"
+            android:textSize="12dp"
+            android:text="@string/mensaje" />
     </LinearLayout>
 </FrameLayout>
