--- a/app/src/main/res/layout/rutinas1.xml
+++ b/app/src/main/res/layout/rutinas1.xml
@@ -38,6 +38,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="RUTINA DE EJERCICIOS"
+                        android:layout_marginLeft="12dp"
                         android:textColor="@color/white"
                         android:textSize="18dp">
                     </TextView>
@@ -63,9 +64,48 @@
 
 
                 <pl.droidsonroids.gif.GifImageView
-                    android:layout_width="189dp"
+                    android:layout_width="217dp"
                     android:layout_height="150dp"
-                    android:src="@drawable/rutina" />
+                    android:src="@drawable/triceps" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginTop="25dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Extenison de triceps">
+
+                    </TextView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Set: 3">
+
+                    </TextView>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Reps:12-15">
+
+                    </TextView>
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="15dp">
+
+
+                <pl.droidsonroids.gif.GifImageView
+                    android:layout_width="217dp"
+                    android:layout_height="150dp"
+                    android:src="@drawable/marcuerda" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -73,10 +113,11 @@
                     android:layout_weight="1"
                     android:layout_marginTop="25dp"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Press de banca">
+                        android:text="Mancuerda">
 
                     </TextView>
                     <TextView
@@ -98,46 +139,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_margin="15dp">
-                <pl.droidsonroids.gif.GifImageView
-                    android:layout_width="189dp"
-                    android:layout_height="150dp"
-                    android:src="@drawable/uno" />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginTop="25dp"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Press de banca\n inclinada">
 
-                    </TextView>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Set: 3">
-
-                    </TextView>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Reps:12-15">
-
-                    </TextView>
-                </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_margin="15dp">
 
                 <pl.droidsonroids.gif.GifImageView
-                    android:layout_width="189dp"
+                    android:layout_width="217dp"
                     android:layout_height="150dp"
-                    android:src="@drawable/dos" />
+                    android:src="@drawable/elevacionfrontal" />
+
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -149,7 +157,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Apertura de\n  maquina">
+                        android:text="Elevacion frontal">
 
                     </TextView>
                     <TextView
@@ -173,19 +181,21 @@
                 android:layout_margin="15dp">
 
                 <pl.droidsonroids.gif.GifImageView
-                    android:layout_width="189dp"
+                    android:layout_width="217dp"
                     android:layout_height="150dp"
-                    android:src="@drawable/tres" />
+                    android:src="@drawable/pecho" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_marginTop="25dp"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Curl alterno">
+                        android:text="Pecho">
 
                     </TextView>
                     <TextView
@@ -207,4 +217,3 @@
     </LinearLayout>
 
 </LinearLayout>
-
