--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -25,11 +25,11 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <ImageView
-        android:layout_width="89dp"
+        android:layout_width="wrap_content"
         android:layout_height="85dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/log" />
+        app:srcCompat="@drawable/logo1" />
 
     <TextView
         android:id="@+id/textView3"
