--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -9,13 +9,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="40dp"
         android:orientation="vertical">
         <ImageView
             android:layout_width="76dp"
             android:layout_height="93dp"
             android:layout_gravity="center"
             android:layout_marginTop="25dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="16dp"
             android:src="@drawable/login"/>
 
         <Button
@@ -73,10 +75,10 @@
         <ImageView
             android:id="@+id/img_imc"
             android:layout_width="wrap_content"
-            android:layout_height="168dp"
+            android:layout_height="210dp"
             android:layout_gravity="center"
             android:layout_marginTop="24dp"
-            android:layout_marginBottom="18dp"
+            android:layout_marginBottom="24dp"
             />
 
         <TextView
