--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -22,11 +22,14 @@
         android:textColorHint="#8CBAF1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:paddingStart="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="85dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo1" />
@@ -35,7 +38,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="132dp"
         android:autoText="false"
         android:contextClickable="false"
         android:text="Ingrese Sus Datos"
@@ -45,6 +48,7 @@
         android:textSize="25dp"
         android:textStyle="normal|bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -102,6 +106,7 @@
         android:textColorHint="#8CBAF1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:paddingStart="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <EditText
@@ -119,6 +124,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
+        android:paddingStart="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
