--- a/app/src/main/res/layout/fragment_principal.xml
+++ b/app/src/main/res/layout/fragment_principal.xml
@@ -17,7 +17,9 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="GYM Generation"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="GYM GOAL FITNESS"
             android:textColor="@color/purple_500"
             android:textSize="35sp"
             android:textStyle="bold" />
@@ -26,25 +28,30 @@
             android:id="@+id/btnrutina1"
             android:layout_width="200dp"
             android:layout_height="120dp"
-            android:background="@drawable/rutina1"/>
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="14dp"
+            android:background="@drawable/rutina1" />
+
         <Button
             android:id="@+id/btnrutina2"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
-            android:layout_marginTop="6dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:background="@drawable/rutina2"/>
         <Button
             android:id="@+id/btnrutina3"
             android:layout_width="wrap_content"
             android:layout_height="130dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="14dp"
             android:background="@drawable/rutina3"/>
         <Button
             android:id="@+id/btnrutina4"
             android:layout_width="300dp"
             android:layout_height="120dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="24dp"
             android:background="@drawable/rutina4"/>
 
     </LinearLayout>
